# D2IC

./: .gitignore  AUTHORS  README.md  benchmark_butterfly_cpu_vs_gpu_autonomous.py  pyproject.toml  requirements.txt  setup.py
D2IC/: Mask2Mesh.py  __init__.py  app_utils.py  batch_base.py  batch_mesh_based.py  dataclasses.py  dic.py  dic_JaxCore.py  dic_base.py  dic_init_motion.py  dic_mesh_based.py  dic_mesh_based_legacy.py  dic_plotter.py  feature_matching.py  mesh_assets.py  motion_init.py  pixel_assets.py  plotter.py  propagator_constant_velocity.py  propagator_previous.py  solver_base.py  solver_global_cg.py  solver_local_gn.py  solver_translation_zncc.py  strain.py
benchmark_results/: benchmark_results.csv  benchmark_results_summary.csv
d2ic/: __init__.py  app_utils.py  batch_base.py  batch_mesh_based.py  dataclasses.py  dic_base.py  dic_mesh_based.py  discrepancy.py  mask2mesh.py  mesh_assets.py  pixel_assets.py  plotter.py  propagator_base.py  solver_base.py  solver_global_cg.py  solver_local_gn.py  solver_translation_zncc.py  strain.py  types.py
doc/: 00_Validation.ipynb  00_Validation_ImageSerie.py  01_Simple2D_DIC.ipynb  02_GUILikeMode.ipynb  03_0_tutorial_sequentialDIC.py  03_1_tutorial_sequentialDIC_pots.ipynb  03_tutorial_platehole_sequence_step_by_step.py  03_tutorial_sequentialDIC.py  03_tutorial_sequentialDIC_pots.ipynb  04_tutorial_buterFly_sequence_step_by_step.py  11_Advanced_Use_Uncertainty_Propagation.ipynb  12_Advanced_Use_Gauss_Newton_Covariance_Estimation.ipynb  d2ic_class_diagram.html  d2ic_class_diagram_editable.pptx  (+5 more)
im_jax/: bicubic.py
(+48 files in other folders)
